começando as mudanças no navbar e definição das cores iniciais

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <body>
   	<!-- Header Section Start -->
     <header id="hero-area">    
-     <div class="overlay"></div>
+     <!-- <div class="overlay"></div> -->
       <nav class="navbar navbar-expand-lg navbar-light fixed-top scrolling-navba bg-faded" id="white-bg">
         <div class="container">
           <!-- Brand and toggle get grouped for better mobile display -->
@@ -77,30 +77,9 @@
         <div class="row justify-content-md-center">
           <div class="col-md-10">
             <div class="carousel-slider owl-carousel owl-theme">
-              <div class="item active">
+              <div class="item active" style="visibility: hidden">
                 <div class="contents text-center">
                   <h1 class="wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms">Basic - Bootstrap 4 Template</h1>
-                  <p class="lead  wow fadeIn" data-wow-duration="1000ms" data-wow-delay="400ms">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it.</p>
-                  <a href="#" class="btn btn-common wow fadeInUp" data-wow-duration="1000ms" data-wow-delay="400ms">Read More</a>
-                  <a href="#" class="btn btn-border wow fadeInUp" data-wow-duration="1000ms" data-wow-delay="400ms">Purchase</a>
-                  <div class="banner_bottom_btn wow fadeInUp" data-wow-duration="1000ms" data-wow-delay="700ms">
-                    <a href="#about" class="js-target-scroll"><i class="icon-mouse"></i></a>               
-                  </div>
-                </div>
-              </div>
-              <div class="item">
-                <div class="contents text-center">
-                  <h1 class="wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms">Digital Solution for Startups</h1>
-                  <p class="lead  wow fadeIn" data-wow-duration="1000ms" data-wow-delay="400ms">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it.</p>
-                  <a href="#" class="btn btn-border wow fadeInUp" data-wow-duration="1000ms" data-wow-delay="400ms">Get Started</a>
-                  <div class="banner_bottom_btn wow fadeInUp" data-wow-duration="1000ms" data-wow-delay="700ms">
-                    <a href="#about" class="js-target-scroll"><i class="icon-mouse"></i></a>               
-                  </div>
-                </div>
-              </div>
-              <div class="item">
-                <div class="contents text-center">
-                  <h1 class="wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms">More Than Just a Template</h1>
                   <p class="lead  wow fadeIn" data-wow-duration="1000ms" data-wow-delay="400ms">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it.</p>
                   <a href="#" class="btn btn-common wow fadeInUp" data-wow-duration="1000ms" data-wow-delay="400ms">Read More</a>
                   <a href="#" class="btn btn-border wow fadeInUp" data-wow-duration="1000ms" data-wow-delay="400ms">Purchase</a>
