--- a/main.html
+++ b/main.html
@@ -98,13 +98,14 @@
   <!-- About Section Start -->
   <section id="about" class="section">
     <div class="container">
-      <div class="row">
-        <div class="col-12 col-md-3 d-flex d-md-block">
-          <img src="/img/jhanniferoliveira.jpg" class="rounded-circle jhannifer-thumb" />
+      <div class="row justify-content-center">
+        <div class="col-12 col-md-3 align ">
+          <img src="img/jhanniferoliveira.jpg" class="rounded-circle jhannifer-thumb" />
         </div>
         <div class="col-12 col-md-7 mt-3 mt-sm-0">
-          <h2 class="section-title wow fadeInUp text-center font--oranienbaum" data-wow-duration="1000ms" data-wow-delay="300ms">SOBRE MIM</h2>
-          <div class="wow fadeInLeft" data-wow-duration="1000ms" data-wow-delay="300ms">
+          <h2 class="section-title section-title--size wow fadeInUp text-center text-md-left font--oranienbaum" 
+            data-wow-duration="1000ms" data-wow-delay="300ms">SOBRE MIM</h2>
+          <div class="wow fadeInLeft text-justify" data-wow-duration="1000ms" data-wow-delay="300ms">
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed
               do eiusmod tempor incididunt ut labore et dolore magna aliqua.
               Ut enim ad minim veniam, quis nostrud exercitation ullamco
@@ -112,20 +113,7 @@
               irure dolor in reprehenderit in voluptate velit esse cillum
               dolore eu fugiat nulla pariatur. Excepteur sint occaecat
               cupidatat non proident, sunt in culpa qui officia deserunt
-              mollit anim id est laborum.
-              <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem
-                accusantium doloremque laudantium, totam rem aperiam, eaque
-                ipsa quae ab illo inventore veritatis et quasi architecto
-                beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem
-                quia voluptas sit aspernatur aut odit aut fugit, sed quia
-                consequuntur magni dolores eos qui ratione voluptatem sequi
-                nesciunt.
-              </p>
-              <p>Neque porro quisquam est, qui dolorem ipsum quia dolor sit
-                amet, consectetur, adipisci velit, sed quia non numquam
-                eius modi tempora incidunt ut labore et dolore magnam aliquam
-                quaerat voluptatem. Lorem ipsum dolor sit amet, consectetur
-                adipisicing elit, sed do eiusmod tempor incididunt.</p>
+              mollit anim id est laborum</p>
           </div>
         </div>
       </div>
@@ -134,7 +122,7 @@
   <!-- About Section End -->
 
   <!-- Services Section Start -->
-  <section id="services" class="services section">
+<!--   <section id="services" class="services section">
     <div class="container">
       <div class="section-header">
         <h3 class="section-subtitle wow fadeInDown" data-wow-duration="1000ms"
@@ -188,7 +176,7 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
   <!-- Services Section End -->
 
   <!-- Portfolio Section -->
@@ -196,9 +184,8 @@
     <!-- Container Starts -->
     <div class="container">
       <div class="section-header">
-        <h3 class="section-subtitle wow fadeInDown" data-wow-duration="1000ms"
-          data-wow-delay="300ms">What We Do</h3>
-        <h2 class="section-title wow fadeInUp" data-wow-duration="1000ms" data-wow-delay="300ms">Works</h2>
+        <h2 class="wow fadeInUp font--oranienbaum section-title--size" 
+          data-wow-duration="1000ms" data-wow-delay="300ms">PROJETOS</h2>
       </div>
       <div class="row">
         <div class="col-md-12">
@@ -222,7 +209,7 @@
           <!-- Portfolio Recent Projects -->
           <div id="portfolio" class="row wow fadeInUp" data-wow-delay="0.8s">
             <div class="col-sm-6 col-md-4 col-lg-4 col-xl-4 mix marketing planning">
-              <div class="portfolio-item">
+              <div class="portfolio-item box foo">
                 <div class="portfolio-img">
                   <img src="img/portfolio/img1.jpg" alt="" />
                 </div>
@@ -238,6 +225,16 @@
                     </div>
                   </div>
                 </div>
+<!--                 <div class="hover-border edgtf-hover-border">
+                  <span class="">
+                    <span class="edgtf-line-1"></span>
+                    <span class="edgtf-line-2"></span>
+                    <span class="edgtf-line-3"></span>
+                    <span class="edgtf-line-4"></span>
+                  </span>
+                </div> -->
+
+
               </div>
             </div>
             <div class="col-sm-6 col-md-4 col-lg-4 col-xl-4 mix planning">
