alterando cores secundarias e seção de prjetos inacabada

--- a/main.html
+++ b/main.html
@@ -24,6 +24,8 @@
   <link rel="stylesheet" href="css/animate.css">
   <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="css/responsive.css">
+  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/code-fx/Pure-CSS3-Animated-Border@V1.0/css/animated-border/animated-border.min.css
+">
 </head>
 
 <body>
@@ -96,7 +98,7 @@
   <!-- Header Section End -->
 
   <!-- About Section Start -->
-  <section id="about" class="section">
+  <section id="sobre" class="section about">
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-12 col-md-3 align ">
@@ -208,15 +210,15 @@
 
           <!-- Portfolio Recent Projects -->
           <div id="portfolio" class="row wow fadeInUp" data-wow-delay="0.8s">
-            <div class="col-sm-6 col-md-4 col-lg-4 col-xl-4 mix marketing planning">
-              <div class="portfolio-item box foo">
-                <div class="portfolio-img">
+            <div class="col-sm-6 col-md-4 col-lg-4 col-xl-4 mix marketing planning ">
+              <div class="portfolio-item">
+                <div class="portfolio-img ">
                   <img src="img/portfolio/img1.jpg" alt="" />
                 </div>
-                <div class="portfoli-content">
-                  <div class="sup-desc-wrap">
-                    <div class="sup-desc-inner">
-                      <div class="sup-meta-wrap">
+                <div class="portfoli-content ">
+                  <div class="sup-desc-wrap ">
+                    <div class="sup-desc-inner ">
+                      <div class="sup-meta-wrap ">
                         <a class="sup-title" href="#">
                           <h4>GeckPro</h4>
                         </a>
@@ -225,16 +227,6 @@
                     </div>
                   </div>
                 </div>
-<!--                 <div class="hover-border edgtf-hover-border">
-                  <span class="">
-                    <span class="edgtf-line-1"></span>
-                    <span class="edgtf-line-2"></span>
-                    <span class="edgtf-line-3"></span>
-                    <span class="edgtf-line-4"></span>
-                  </span>
-                </div> -->
-
-
               </div>
             </div>
             <div class="col-sm-6 col-md-4 col-lg-4 col-xl-4 mix planning">
@@ -655,7 +647,7 @@
   <!-- End Pricing Table Section -->
 
   <!-- Contact Section Start -->
-  <section id="contact" class="section">
+  <section id="contato" class="section">
     <div class="container">
       <div class="row justify-content-md-center">
         <div class="col-md-10 wow rollIn" data-wow-duration="1000ms" data-wow-delay="300ms">
