alterando cores secundarias e seção de prjetos inacabada 2

--- a/main.html
+++ b/main.html
@@ -333,7 +333,7 @@
   <!-- Portfolio Section Ends -->
 
   <!-- Why Section Start -->
-  <div id="why" class="why">
+<!--   <div id="why" class="why">
     <div class="container">
       <div class="row">
         <div class="col-md-6 col-sm-6 col-xs-12">
@@ -418,11 +418,11 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
   <!-- Why Section End -->
 
   <!-- Team Section Start  -->
-  <section id="team" class="team-area section">
+<!--   <section id="team" class="team-area section">
     <div class="container">
       <div class="section-header">
         <h3 class="section-subtitle wow fadeInDown" data-wow-duration="1000ms"
@@ -528,11 +528,11 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
   <!-- Team Section End  -->
 
   <!-- Start Get-Strted Section -->
-  <section class="great-started section">
+<!--   <section class="great-started section">
     <div class="overlay"></div>
     <div class="container">
       <div class="row">
@@ -546,11 +546,11 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
   <!-- End Get-Strted Section -->
 
   <!-- Start Pricing Table Section -->
-  <div id="pricing" class="section pricing-section">
+<!--   <div id="pricing" class="section pricing-section">
     <div class="container">
       <div class="section-header">
         <h3 class="section-subtitle wow fadeInDown" data-wow-duration="1000ms"
@@ -643,11 +643,11 @@
 
       </div>
     </div>
-  </div>
+  </div> -->
   <!-- End Pricing Table Section -->
 
   <!-- Contact Section Start -->
-  <section id="contato" class="section">
+  <section id="contato" class="section contact">
     <div class="container">
       <div class="row justify-content-md-center">
         <div class="col-md-10 wow rollIn" data-wow-duration="1000ms" data-wow-delay="300ms">
