começando a criar página de projeto!

--- a/main.html
+++ b/main.html
@@ -219,7 +219,7 @@
                   <div class="sup-desc-wrap ">
                     <div class="sup-desc-inner ">
                       <div class="sup-meta-wrap ">
-                        <a class="sup-title" href="#">
+                        <a class="sup-title" href="projects/projeto-um.html">
                           <h4>GeckPro</h4>
                         </a>
                         <p class="sup-description">Responsive Wordpress Onepage Template</p>
