--- a/main.html
+++ b/main.html
@@ -18,18 +18,17 @@
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/font-awesome.min.css">
   <link rel="stylesheet" href="css/simple-line-icons.css">
-  <link rel="stylesheet" href="css/slicknav.css">
-  <link rel="stylesheet" href="css/owl.carousel.css">
-  <link rel="stylesheet" href="css/owl.theme.css">
+  <!-- <link rel="stylesheet" href="css/slicknav.css"> -->
+  <!-- <link rel="stylesheet" href="css/owl.carousel.css"> -->
+  <!-- <link rel="stylesheet" href="css/owl.theme.css"> -->
   <link rel="stylesheet" href="css/animate.css">
   <link rel="stylesheet" href="css/main.css">
-  <link rel="stylesheet" href="css/responsive.css">
+  <!-- <link rel="stylesheet" href="css/responsive.css"> -->
   <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/code-fx/Pure-CSS3-Animated-Border@V1.0/css/animated-border/animated-border.min.css
 ">
 </head>
 
 <body>
-  <!-- Header Section Start -->
   <header id="hero-area">
     <!-- <div class="overlay"></div> -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top scrolling-navba bg-faded"
@@ -95,9 +94,7 @@
     </div>
 
   </header>
-  <!-- Header Section End -->
 
-  <!-- About Section Start -->
   <section id="sobre" class="section about">
     <div class="container">
       <div class="row justify-content-center">
@@ -121,67 +118,7 @@
       </div>
     </div>
   </section>
-  <!-- About Section End -->
 
-  <!-- Services Section Start -->
-<!--   <section id="services" class="services section">
-    <div class="container">
-      <div class="section-header">
-        <h3 class="section-subtitle wow fadeInDown" data-wow-duration="1000ms"
-          data-wow-delay="300ms">Let Us Help You</h3>
-        <h2 class="section-title wow fadeInUp" data-wow-duration="1000ms" data-wow-delay="300ms">Our Services</h2>
-      </div>
-      <div class="row">
-        <div class="col-md-3 col-sm-6 col-xs-12">
-          <div class="service-box wow fadeInLeft" data-wow-duration="1000ms" data-wow-delay="300ms">
-            <div class="icon">
-              <i class="icon-settings"></i>
-            </div>
-            <h3>
-              <a href="#">Web Developer</a>
-            </h3>
-            <p>Lorem ipsum dolor sit amet, conse ctetur adipisicing</p>
-          </div>
-        </div>
-        <div class="col-md-3 col-sm-6 col-xs-12">
-          <div class="service-box wow fadeInLeft" data-wow-duration="1000ms" data-wow-delay="450ms">
-            <div class="icon">
-              <i class="icon-graph"></i>
-            </div>
-            <h3>
-              <a href="#">Graphic Design</a>
-            </h3>
-            <p>Lorem ipsum dolor sit amet, conse ctetur adipisicing</p>
-          </div>
-        </div>
-        <div class="col-md-3 col-sm-6 col-xs-12">
-          <div class="service-box wow fadeInLeft" data-wow-duration="1000ms" data-wow-delay="550ms">
-            <div class="icon">
-              <i class="icon-camera"></i>
-            </div>
-            <h3>
-              <a href="#">Photograph</a>
-            </h3>
-            <p>Lorem ipsum dolor sit amet, conse ctetur adipisicing</p>
-          </div>
-        </div>
-        <div class="col-md-3 col-sm-6 col-xs-12">
-          <div class="service-box wow fadeInLeft" data-wow-duration="1000ms" data-wow-delay="650ms">
-            <div class="icon">
-              <i class="icon-screen-tablet"></i>
-            </div>
-            <h3>
-              <a href="#">App Development</a>
-            </h3>
-            <p>Lorem ipsum dolor sit amet, conse ctetur adipisicing</p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section> -->
-  <!-- Services Section End -->
-
-  <!-- Portfolio Section -->
   <section id="portfolio" class="section">
     <!-- Container Starts -->
     <div class="container">
@@ -330,323 +267,7 @@
     </div>
     <!-- Container Ends -->
   </section>
-  <!-- Portfolio Section Ends -->
 
-  <!-- Why Section Start -->
-<!--   <div id="why" class="why">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-6 col-sm-6 col-xs-12">
-          <div class="section-header">
-            <h3 class="section-subtitle wow fadeInDown" data-wow-duration="1000ms"
-              data-wow-delay="300ms">Who We Are</h3>
-            <h2 class="section-title wow fadeInUp" data-wow-duration="1000ms" data-wow-delay="300ms">Why choose Us</h2>
-          </div>
-          <div class="why-item wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms">
-            <div class="icon">
-              <i class="icon-fire"></i>
-            </div>
-            <div class="why-content">
-              <h3>Do Believe in Quality</h3>
-              <p>Our key to success is the excellent quality of work That
-                we hold across all our projects.</p>
-            </div>
-          </div>
-          <div class="why-item wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="500ms">
-            <div class="icon">
-              <i class="icon-energy"></i>
-            </div>
-            <div class="why-content">
-              <h3>Simple and fast</h3>
-              <p>Our key to success is the excellent quality of work That
-                we hold across all our projects.</p>
-            </div>
-          </div>
-          <div class="why-item wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="700ms">
-            <div class="icon">
-              <i class="icon-heart"></i>
-            </div>
-            <div class="why-content">
-              <h3>Intuitive and convenience</h3>
-              <p>Our key to success is the excellent quality of work That
-                we hold across all our projects.</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-6 col-sm-6 col-xs-12">
-          <div id="testimonial" class="wow fadeInDown" data-wow-duration="1000ms"
-            data-wow-delay="300ms">
-            <div class="touch-slider" class="owl-carousel owl-theme">
-              <div class="item active text-center">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-                  sed do eiusmod tempor incididunt ut labore et dolore
-                  magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-                  ullamco laboris nisi ut aliquip ex ea commodo conseq
-                  uatuis aute irure dolor.</p>
-                <div class="client-info">
-                  <h2 class="client-name">Jhon Nash</h2>
-                  <h4 class="client-details">Founder & CEO, JN Inc.</h4>
-                </div>
-                <img class="img-member" src="img/testimonial/img1.png" alt="">
-              </div>
-              <div class="item text-center">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-                  sed do eiusmod tempor incididunt ut labore et dolore
-                  magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-                  ullamco laboris nisi ut aliquip ex ea commodo conseq
-                  uatuis aute irure dolor.</p>
-                <div class="client-info">
-                  <h2 class="client-name">Jhon Nash</h2>
-                  <h4 class="client-details">Founder & CEO, JN Inc.</h4>
-                </div>
-                <img class="img-member" src="img/testimonial/img2.png" alt="">
-              </div>
-              <div class="item text-center">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-                  sed do eiusmod tempor incididunt ut labore et dolore
-                  magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-                  ullamco laboris nisi ut aliquip ex ea commodo conseq
-                  uatuis aute irure dolor.</p>
-                <div class="client-info">
-                  <h2 class="client-name">Jhon Nash</h2>
-                  <h4 class="client-details">Founder & CEO, JN Inc.</h4>
-                </div>
-                <img class="img-member" src="img/testimonial/img3.png" alt="">
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div> -->
-  <!-- Why Section End -->
-
-  <!-- Team Section Start  -->
-<!--   <section id="team" class="team-area section">
-    <div class="container">
-      <div class="section-header">
-        <h3 class="section-subtitle wow fadeInDown" data-wow-duration="1000ms"
-          data-wow-delay="300ms">Meet Our Team</h3>
-        <h2 class="section-title wow fadeInUp" data-wow-duration="1000ms" data-wow-delay="300ms">Team Members</h2>
-      </div>
-      <div class="row">
-        <div class="col-md-4 col-sm-6 col-xs-12">
-          <div class="single-team wow fadeInLeft" data-wow-duration="1000ms" data-wow-delay="400ms">
-            <img src="img/team/1.png" alt="">
-            <div class="team-content">
-              <h4 class="tem-member">John Doe</h4>
-              <h6>web developer</h6>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-              <ul class="team-social">
-                <li>
-                  <a href="#">
-                    <i class="fa fa-facebook"></i>
-                  </a>
-                </li>
-                <li>
-                  <a href="#">
-                    <i class="fa fa-twitter"></i>
-                  </a>
-                </li>
-                <li>
-                  <a href="#">
-                    <i class="fa fa-google-plus"></i>
-                  </a>
-                </li>
-                <li>
-                  <a href="#">
-                    <i class="fa fa-linkedin"></i>
-                  </a>
-                </li>
-              </ul>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4 col-sm-6 col-xs-12">
-          <div class="single-team wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="500ms">
-            <img src="img/team/2.png" alt="">
-            <div class="team-content">
-              <h4 class="tem-member">Sommer Christian</h4>
-              <h6>social marketing</h6>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-              <ul class="team-social">
-                <li>
-                  <a href="#">
-                    <i class="fa fa-facebook"></i>
-                  </a>
-                </li>
-                <li>
-                  <a href="#">
-                    <i class="fa fa-twitter"></i>
-                  </a>
-                </li>
-                <li>
-                  <a href="#">
-                    <i class="fa fa-google-plus"></i>
-                  </a>
-                </li>
-                <li>
-                  <a href="#">
-                    <i class="fa fa-linkedin"></i>
-                  </a>
-                </li>
-              </ul>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4 col-sm-6 col-xs-12">
-          <div class="single-team wow fadeInRight" data-wow-duration="1000ms" data-wow-delay="400ms">
-            <img src="img/team/3.png" alt="">
-            <div class="team-content">
-              <h4 class="tem-member">Ben Davis</h4>
-              <h6>Frontend Developer</h6>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-              <ul class="team-social">
-                <li>
-                  <a href="#">
-                    <i class="fa fa-facebook"></i>
-                  </a>
-                </li>
-                <li>
-                  <a href="#">
-                    <i class="fa fa-twitter"></i>
-                  </a>
-                </li>
-                <li>
-                  <a href="#">
-                    <i class="fa fa-google-plus"></i>
-                  </a>
-                </li>
-                <li>
-                  <a href="#">
-                    <i class="fa fa-linkedin"></i>
-                  </a>
-                </li>
-              </ul>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section> -->
-  <!-- Team Section End  -->
-
-  <!-- Start Get-Strted Section -->
-<!--   <section class="great-started section">
-    <div class="overlay"></div>
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12 col-sm-12">
-          <div class="great-started-text text-center">
-            <h4 class="wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms">We Are Ready to Help You</h4>
-            <h2 class="wow zoomIn" data-wow-duration="1000ms" data-wow-delay="100ms">Get the Best Solution for Your Business</h2>
-            <a href="#" class="btn btn-common wow fadeInUp" data-wow-duration="3000ms"
-              data-wow-delay="100ms">Get Started</a>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section> -->
-  <!-- End Get-Strted Section -->
-
-  <!-- Start Pricing Table Section -->
-<!--   <div id="pricing" class="section pricing-section">
-    <div class="container">
-      <div class="section-header">
-        <h3 class="section-subtitle wow fadeInDown" data-wow-duration="1000ms"
-          data-wow-delay="300ms">Our Best Plans</h3>
-        <h2 class="section-title wow fadeInUp" data-wow-duration="1000ms" data-wow-delay="300ms">Pricing</h2>
-      </div>
-
-      <div class="row pricing-tables">
-        <div class="col-md-4 col-sm-4 col-xs-12">
-          <div class="pricing-table wow fadeInLeft" data-wow-duration="1000ms" data-wow-delay="300ms">
-            <div class="plan-name color-1">
-              <h3>Starter</h3>
-            </div>
-            <div class="plan-price">
-              <div class="price-value">
-                <span>$</span> 39
-                <span>.25</span>
-              </div>
-              <div class="interval">Start
-                <br> Business</div>
-            </div>
-            <div class="plan-list">
-              <ul>
-                <li>4 Programs</li>
-                <li>No Support</li>
-                <li>Limited Access</li>
-                <li>1 User</li>
-              </ul>
-            </div>
-            <div class="plan-signup">
-              <a href="#" class="btn btn-common">get started</a>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-md-4 col-sm-4 col-xs-12">
-          <div class="pricing-table highlight-plan wow fadeInUp" data-wow-duration="1000ms"
-            data-wow-delay="300ms">
-            <div class="plan-name color-2">
-              <h3>Premium</h3>
-            </div>
-            <div class="plan-price">
-              <div class="price-value">
-                <span>$</span> 69
-                <span>.99</span>
-              </div>
-              <div class="interval">High
-                <br> Business</div>
-            </div>
-            <div class="plan-list">
-              <ul>
-                <li>10 Programs</li>
-                <li>24/7 Support</li>
-                <li>Limited Access</li>
-                <li>4 User</li>
-              </ul>
-            </div>
-            <div class="plan-signup">
-              <a href="#" class="btn btn-border">get started</a>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-md-4 col-sm-4 col-xs-12">
-          <div class="pricing-table wow fadeInRight" data-wow-duration="1000ms" data-wow-delay="300ms">
-            <div class="plan-name color-3">
-              <h3>Unltimate</h3>
-            </div>
-            <div class="plan-price">
-              <div class="price-value">
-                <span>$</span> 89
-                <span>.99</span>
-              </div>
-              <div class="interval">Any
-                <br> Business</div>
-            </div>
-            <div class="plan-list">
-              <ul>
-                <li>15 Programs</li>
-                <li>24/7 Support</li>
-                <li>Full Access</li>
-                <li>8 User</li>
-              </ul>
-            </div>
-            <div class="plan-signup">
-              <a href="#" class="btn btn-common">get started</a>
-            </div>
-          </div>
-        </div>
-
-      </div>
-    </div>
-  </div> -->
-  <!-- End Pricing Table Section -->
-
-  <!-- Contact Section Start -->
   <section id="contato" class="section contact">
     <div class="container">
       <div class="row justify-content-md-center">
@@ -681,9 +302,7 @@
       </div>
     </div>
   </section>
-  <!-- Contact Section End -->
 
-  <!-- Contact Icon Start -->
   <div class="section contact-icon">
     <div class="overlay"></div>
     <div class="container">
@@ -721,9 +340,7 @@
       </div>
     </div>
   </div>
-  <!-- Contact Icon End -->
 
-  <!-- Footer Section Start -->
   <footer>
     <!-- Footer Area Start -->
     <section class="footer-Content">
@@ -875,9 +492,7 @@
     <!-- Copyright End -->
 
   </footer>
-  <!-- Footer Section End -->
 
-  <!-- Go To Top Link -->
   <a href="#" class="back-to-top">
     <i class="fa fa-arrow-up"></i>
   </a>
@@ -891,7 +506,6 @@
     </div>
   </div>
 
-  <!-- jQuery first, then Tether, then Bootstrap JS. -->
   <script src="js/jquery-min.js"></script>
   <script src="js/tether.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
